♻️ Restructure command service logic to allow caching of requests